# pdf-studio

./: .gitignore  README.md  generate_icon.py  index.html  package-lock.json  package.json  vite.config.ts
.github/: RELEASE_NOTES.md
.github/workflows/: release.yml
public/: sample.annot.json
src/: backend.ts  editmode.ts  editor.ts  icons.ts  main.ts  pdfview.ts  state.ts  styles.css  tools.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf_edit.rs
