[package]
name = "pdf-studio"
version = "0.2.0"
description = "Professional PDF editor & viewer"
authors = ["Kacper"]
edition = "2021"

[lib]
name = "pdf_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
lopdf = "0.34"

[profile.release]
opt-level = "s"
lto = true
strip = true
